[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "typedcollections"
version = "0.1.0"
description = "Strongly typed list collection with optional validation and coercion."
authors = [
    { name="Dev Khurana", email="devkhurana2004@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
